Updated open-policy-agent 1.7.1-1

--- a/extra/open-policy-agent/.nvchecker.toml
+++ b/extra/open-policy-agent/.nvchecker.toml
@@ -1,5 +1,4 @@
 [open-policy-agent]
-source = "github"
-github = "open-policy-agent/opa"
-use_max_tag = true
+source = "git"
+git = "https://github.com/open-policy-agent/opa.git"
 prefix = "v"
