--- a/extra/open-policy-agent/PKGBUILD
+++ b/extra/open-policy-agent/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: David Birks <david@birks.dev>
 
 pkgname=open-policy-agent
-pkgver=1.6.0
+pkgver=1.7.1
 pkgrel=1
 pkgdesc='Command-line utility and REPL for Open Policy Agent'
 arch=(x86_64)
@@ -15,14 +15,8 @@ makedepends=(
   git
   go
 )
-_tag=710b5a62789fbe8ad231b2fc0090c664f1ac93ba
-source=(git+https://github.com/open-policy-agent/opa.git#tag=${_tag})
-b2sums=('37cf9523a090819d9b4176036eeee58196dc5b2eedf229b55f057e4d1387070565fa70a903689ef8675b6f67c82d45e6d1071578177b4fcebca0ec95d129baa6')
-
-pkgver() {
-  cd opa
-  git describe --tags | sed 's/^v//'
-}
+source=("git+https://github.com/open-policy-agent/opa.git#tag=v$pkgver")
+b2sums=('35da62efc09c8ad1749b0a78312c67f48879e026f2496c0cc9c74484bad22419b881e0fbce03a426c1fd8714f8c5fffb0b89e538f153296f29b2c7ca10557c44')
 
 build() {
   cd opa
@@ -34,9 +28,8 @@ build() {
   export GOFLAGS="-buildmode=pie -trimpath -mod=readonly -modcacherw"
 
   go build \
-  -ldflags "-linkmode=external -X github.com/open-policy-agent/opa/version.Version=${pkgver}" \
-  -o opa \
-  .
+    -ldflags "-linkmode=external -X github.com/open-policy-agent/opa/version.Version=${pkgver}" \
+    -o opa .
 
   mkdir completion
   ./opa completion bash > completion/opa
