--- a/extra/fretboard/PKGBUILD
+++ b/extra/fretboard/PKGBUILD
@@ -2,11 +2,12 @@
 
 pkgname=fretboard
 pkgver=9.1
-pkgrel=1
+pkgrel=2
 pkgdesc='Look up guitar chords'
 arch=(x86_64)
 url='https://apps.gnome.org/Fretboard/'
 license=(GPL-3.0-or-later)
+groups=(gnome-circle)
 depends=(
   dconf
   gcc-libs
@@ -25,12 +26,12 @@ makedepends=(
 )
 source=(
   "git+https://github.com/bragefuglseth/fretboard.git#tag=v$pkgver"
-  fretboard-window-icon.patch
-  fretboard-metainfo-path.patch
+  fretboard-dbus-activatable.patch
 )
-b2sums=('3cabacce964d8c657a139bd8acbb86387307c5b32b4fb177bc10d9682c30ade9dded097225dd6eea91c9b4a59b9537829365d883fb8282d796ecfda07927fdcf'
-        '5ec0fe78bf9cb057ee65abf9ca35168a30c85c4fdd5a75af7f44648e8bbfd7f0c654bab0d015663f8790ec261d746b5340c98bd8ffbf430ce92a489db5f36026'
-        '162f4583bfb3f75b75ccee05fa7dcba030a7f90be805424617f02c412f9fa9725b789c4f442e9abd617875cf982f54595f0412e680294ac01038a8acf3f0a5d1')
+b2sums=(
+  3cabacce964d8c657a139bd8acbb86387307c5b32b4fb177bc10d9682c30ade9dded097225dd6eea91c9b4a59b9537829365d883fb8282d796ecfda07927fdcf
+  08e41505312019891fb7d3e4e321b5f8a21cfa2837dd1c7aceb74264dc6bf2d3885a4b3a3e5dd926c9a9712d8c8d8f1accc52d6d8ea154365428589f0665f34b
+)
 
 prepare() {
   cd $pkgname
@@ -38,11 +39,8 @@ prepare() {
   CARGO_HOME="$srcdir/build/cargo-home" \
     cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 
-  # https://github.com/bragefuglseth/fretboard/pull/57
-  git apply -3 ../fretboard-window-icon.patch
-
-  # https://github.com/bragefuglseth/fretboard/pull/58
-  git apply -3 ../fretboard-metainfo-path.patch
+  # https://github.com/bragefuglseth/fretboard/pull/85
+  git apply -3 ../fretboard-dbus-activatable.patch
 }
 
 build() {
