--- a/extra/bash-preexec/PKGBUILD
+++ b/extra/bash-preexec/PKGBUILD
@@ -2,23 +2,16 @@
 # Contributor: Quentin Bouvet <qbouvet at outlook dot com>
 
 pkgname=bash-preexec
-pkgver=0.5.0
-pkgrel=2
+pkgver=0.6.0
+pkgrel=1
 pkgdesc="preexec and precmd functions for Bash just like Zsh"
 arch=('any')
 url="https://github.com/rcaloras/bash-preexec"
 license=('MIT')
 makedepends=('bats' 'coreutils')
-source=("$pkgname-$pkgver.tar.gz::$url/archive/$pkgver.tar.gz"
-        "$pkgname-$pkgver-tests.patch::$url/commit/a44754f5c3ca76b0330324680670cb8574d2768f.patch")
+source=("$pkgname-$pkgver.tar.gz::$url/archive/$pkgver.tar.gz")
 install=$pkgname.install
-sha256sums=('23c589cd1da209c0598f92fac8d81bb11632ba1b2e68ccaf4ad2c4f3204b877c'
-            'db9e914aa8cb27883c9ba100ff8b38080f9108fd6f438764b9ae1ca4ae2d17bf')
-
-prepare() {
-  cd "$pkgname-$pkgver"
-  patch -Np1 -i "../$pkgname-$pkgver-tests.patch"
-}
+sha256sums=('1a987c0ef0e9cfa0391389327c5aef30166325b32666adde3daa9b809850cdd1')
 
 check() {
   cd "$pkgname-$pkgver/test"
