--- a/extra/cabal-install/PKGBUILD
+++ b/extra/cabal-install/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=cabal-install
 pkgver=3.8.1.0
-pkgrel=58
+pkgrel=59
 pkgdesc="The command-line interface for Cabal and Hackage."
 url="https://hackage.haskell.org/package/cabal-install"
 license=('BSD-3-Clause')
@@ -29,7 +29,7 @@ prepare() {
   patch -p2 -i ../$pkgname-key-holder-updates-8669.patch
   patch -p2 -l -i ../$pkgname-key-holder-updates-9068.patch
   patch -p2 -l -i ../$pkgname-key-holder-updates-11095.patch
-  uusi -u base -u text -u resolv -u time
+  uusi -u base -u text -u resolv -u time -u zlib
 }
 
 build() {
