--- a/extra/haskell-io-streams/PKGBUILD
+++ b/extra/haskell-io-streams/PKGBUILD
@@ -3,7 +3,7 @@
 _hkgname=io-streams
 pkgname=haskell-io-streams
 pkgver=1.5.2.2
-pkgrel=89
+pkgrel=90
 pkgdesc="Simple, composable, and easy-to-use stream I/O"
 url="https://github.com/snapframework/io-streams"
 license=('BSD')
@@ -17,7 +17,7 @@ sha512sums=('ba94eb8d8bed29870469666696fdc984f0abacadc71cc7b26e0aa747ffa88500946
 
 prepare() {
     cd $_hkgname-$pkgver
-    uusi -u primitive
+    uusi -u primitive -u zlib
 }
 
 build() {
