--- a/extra/haskell-zlib/PKGBUILD
+++ b/extra/haskell-zlib/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintainer: Colin Woodbury <colingw@gmail.com>
 
 pkgname=haskell-zlib
-pkgver=0.6.3.0
-pkgrel=94
+pkgver=0.7.0.0
+pkgrel=1
 pkgdesc="Compression and decompression in the gzip and zlib formats"
 url="https://hackage.haskell.org/package/zlib"
-license=('BSD')
+license=('BSD-3-Clause')
 arch=('x86_64')
 depends=('ghc-libs' 'zlib')
 makedepends=('ghc' 'uusi' 'haskell-quickcheck' 'haskell-tasty' 'haskell-tasty-quickcheck')
 source=(https://hackage.haskell.org/packages/archive/zlib/${pkgver}/zlib-${pkgver}.tar.gz)
-sha512sums=('95daae13c5d5458fd7c610ce4cc686dc7af477364c4dcf3d31abede84f6e4b4e70ea255f7ded586d46d9bb6298d19c93b8856eec16c6002265ed076e52bf9a21')
+sha512sums=('1271ae35457a0a30c254bb7c4c043bd51c65cb31a0610cbe3114fc237aa6c9058e5008edf80dbe5883736a731fc312e10b40ce50114f1023ddfc5a779d628879')
 
 prepare() {
     cd zlib-$pkgver
