--- a/extra/secrets/PKGBUILD
+++ b/extra/secrets/PKGBUILD
@@ -3,11 +3,12 @@
 
 pkgname=secrets
 pkgver=11.1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Password manager for GNOME which makes use of the KeePass v.4 format"
 url="https://apps.gnome.org/Secrets"
 arch=(any)
 license=('GPL-3.0-only')
+groups=(gnome-circle)
 depends=(
   dconf
   glib2
