--- a/extra/haskell-versions/PKGBUILD
+++ b/extra/haskell-versions/PKGBUILD
@@ -2,16 +2,16 @@
 
 _hkgname=versions
 pkgname=haskell-versions
-pkgver=6.0.6
-pkgrel=18
+pkgver=6.0.7
+pkgrel=1
 pkgdesc="Types and parsers for software version numbers"
 url="https://github.com/fosskers/versions"
-license=('BSD')
+license=('BSD-3-Clause')
 arch=('x86_64')
 depends=('ghc-libs' 'haskell-megaparsec' 'haskell-hashable' 'haskell-parser-combinators')
 makedepends=('ghc' 'uusi' 'haskell-microlens' 'haskell-tasty' 'haskell-tasty-hunit')
 source=(https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz)
-sha512sums=('0f9263cd88d3d58ae4889b72669af8dc56644feb5024b382968b01c4aebf8ac5a925b3bd16f9fdb706df7387fe8fffed341fc6395a830ae60ba912115adc66ae')
+sha512sums=('20a307812ccecb8bb9f16117e57311607ef7ee0706343d3d2ddcb1b4eab3213203f0350b1ea85ed9aa8414a90d1affd18bd2e168c5f76b089bb948440f61bdd4')
 
 prepare() {
     cd $_hkgname-$pkgver
