--- a/extra/solanum/PKGBUILD
+++ b/extra/solanum/PKGBUILD
@@ -2,11 +2,12 @@
 
 pkgname=solanum
 pkgver=6.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Pomodoro timer for the GNOME desktop'
 arch=(x86_64)
 url='https://apps.gnome.org/Solanum/'
 license=(GPL-3.0-or-later)
+groups=(gnome-circle)
 depends=(
   dconf
   gcc-libs
@@ -27,12 +28,8 @@ makedepends=(
   meson
   rust
 )
-source=(
-  "git+https://gitlab.gnome.org/World/Solanum.git?signed#tag=$pkgver"
-  solanum-appdata-path.patch
-)
-b2sums=('734a59e908bd3198d7f1045a00fa32f6ff991ed67951066f6e67d02d6395c070265918ea5c78c91dbb6e7edbb425f6b3ae7c3058ae68df2b5a52a551704fa654'
-        '55c01c0f38f170f84cb223510b761370e7d98da2ea9bc6bce02430719033ec694c8524eea6a3de1d522ab29c81e2528f9ccc5f4a18b264a1ed1ef07015c27f8a')
+source=("git+https://gitlab.gnome.org/World/Solanum.git?signed#tag=$pkgver")
+b2sums=(734a59e908bd3198d7f1045a00fa32f6ff991ed67951066f6e67d02d6395c070265918ea5c78c91dbb6e7edbb425f6b3ae7c3058ae68df2b5a52a551704fa654)
 validpgpkeys=(173547C8EB86C22FF5B6EF790F974ABB3478DC48) # Christopher Davis (disroot.org) <brainblasted@disroot.org>
 
 prepare() {
@@ -40,9 +37,6 @@ prepare() {
 
   CARGO_HOME="$srcdir/build/cargo-home" \
     cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
-
-  # https://gitlab.gnome.org/World/Solanum/-/merge_requests/84
-  git apply -3 ../solanum-appdata-path.patch
 }
 
 build() {
