--- a/extra/haskell-gi/PKGBUILD
+++ b/extra/haskell-gi/PKGBUILD
@@ -3,18 +3,18 @@
 
 _hkgname=haskell-gi
 pkgname=haskell-gi
-pkgver=0.26.12
-pkgrel=7
+pkgver=0.26.13
+pkgrel=1
 pkgdesc="Generate Haskell bindings for GObject Introspection capable libraries"
 url="https://github.com/haskell-gi/haskell-gi"
-license=("LGPL2")
+license=('LGPL-2.0-only')
 arch=('x86_64')
 depends=('ghc-libs' 'glib2' 'gobject-introspection-runtime' 'haskell-gi-base'
          'haskell-ansi-terminal' 'haskell-attoparsec' 'haskell-pretty-show' 'haskell-safe'
          'haskell-xdg-basedir' 'haskell-xml-conduit' 'haskell-regex-tdfa')
 makedepends=('ghc' 'gobject-introspection' 'haskell-cabal-doctest' 'haskell-doctest')
 source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
-sha512sums=('155f827ee3a4c1ce2a96f1dfc5776070b98828047e857a1214405d65c547fd4cb87b4d9a3daf4c387a3234a33e52cc5c4f4d0d9284b7d6353f81b262673190c6')
+sha512sums=('b7df825697b3aab3a62160bd16c81312ecde8a54db9b8491764a186000a83e589887418c440912cc06d6db29018d9693f7aa827ba6d8cdfe4d8dfe407740c800')
 
 build() {
     cd $_hkgname-$pkgver
