--- a/extra/cartridges/.nvchecker.toml
+++ b/extra/cartridges/.nvchecker.toml
@@ -1,4 +1,4 @@
 [cartridges]
 source = "git"
-git = "https://github.com/kra-mo/cartridges.git"
+git = "https://codeberg.org/kramo/cartridges.git"
 prefix = "v"
