--- a/extra/health/PKGBUILD
+++ b/extra/health/PKGBUILD
@@ -2,11 +2,12 @@
 
 pkgname=health
 pkgver=0.95.0
-pkgrel=4
+pkgrel=5
 pkgdesc='Health tracking app for the GNOME desktop'
 arch=(x86_64)
 url='https://apps.gnome.org/Health/'
 license=(GPL-3.0-or-later)
+groups=(gnome-circle)
 depends=(
   cairo
   dconf
