--- a/extra/zabbix/zabbix-agent2.service
+++ b/extra/zabbix/zabbix-agent2.service
@@ -6,7 +6,7 @@ Wants=network-online.target
 [Service]
 Type=simple
 ExecStart=/usr/bin/zabbix_agent2
-User=zabbix-agent
+User=zabbix
 
 [Install]
 WantedBy=multi-user.target
